Compiler/test_inputs/valid/08_zero_params.mt
@triton.jit
def init(): {
  value = seed;
}
