Compiler/test_inputs/invalid/04_block_without_braces.mt
@triton.jit
def bad_block(x): (
  y = x + 1;
)
